[PE] Fix contents opaque for composited layers in the presence of a foreground layer

The foreground layer paints normal-flow and positive z-index non-composited
children in the presence of a composited negative-z-index-child. In these cases,
we should not consider the normal-flow or positive z-index non-composited children
as contributing to opaqueness of the main graphics layer, since they paint
elsewhere.

Bug: 892137

Change-Id: I7bd6a4eab615881e4ec3931049f292b046202430
Reviewed-on: https://chromium-review.googlesource.com/c/1332699
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607683}
Former-commit-id: bda6e124f6ffff2a67c32d2e65903a2c25334430