third_party/blink/renderer/core/testing/core_unit_test_helper.h
@@ -22,6 +22,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
+class PaintLayer;
+
 class SingleChildLocalFrameClient final : public EmptyLocalFrameClient {
  public:
   static SingleChildLocalFrameClient* Create() {
@@ -110,6 +112,10 @@ class RenderingTest : public PageTestBase, public UseMockScrollbarSettings {
   LayoutObject* GetLayoutObjectByElementId(const char* id) const {
     const auto* element = GetElementById(id);
     return element ? element->GetLayoutObject() : nullptr;
+  }
+
+  PaintLayer* GetPaintLayerByElementId(const char* id) {
+    return ToLayoutBoxModelObject(GetLayoutObjectByElementId(id))->Layer();
   }
 
  private:
